--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,7 @@
 #prev-button, #next-button {
   width: 30px;
   height: 15px;
+  opacity: 50;
   border: none;
   background-color: transparent;
   cursor: pointer;
